--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-pwa-template",
+  "name": "front-shope-route",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "@hookform/resolvers": "^3.3.1",
+    "@nextui-org/modal": "^2.0.23",
+    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/system": "^2.0.10",
+    "@nextui-org/theme": "^2.1.9",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "clsx": "^2.0.0",
+    "cookies-next": "^4.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "js-file-download": "^0.4.12",
+    "lucide": "^0.274.0",
+    "lucide-react": "^0.274.0",
+    "mapbox-gl": "2.15.0",
     "next": "13.4.7",
     "next-pwa": "^5.6.0",
-    "postcss": "8.4.24",
+    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.46.2",
+    "swr": "^2.2.4",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.7.15",
+    "@types/uuid": "^9.0.4",
+    "webpack": "^5.88.2"
   }
 }
